syntax = "proto3";

package auth;

option go_package = "/proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}
message RegisterResponse {
    string token = 1;
}

message ValidateTokenRequest {
    string token = 1;
}
message ValidateTokenResponse {
    bool valid = 1;
}